glr-core/tests/fixtures/missing_parse_table_fields.stderr
warning: unused import: `SymbolId`
 --> tests/fixtures/missing_parse_table_fields.rs:4:57
  |
4 | use rust_sitter_glr_core::{Action, ParseTable, StateId, SymbolId};
  |                                                         ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0063]: missing fields `alias_sequences`, `dynamic_prec_by_rule`, `eof_symbol` and 16 other fields in initializer of `ParseTable`
 --> tests/fixtures/missing_parse_table_fields.rs:9:24
  |
9 |     let _parse_table = ParseTable {
  |                        ^^^^^^^^^^ missing `alias_sequences`, `dynamic_prec_by_rule`, `eof_symbol` and 16 other fields
